greeting-service/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: greeting-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting
spec:
  hosts:
  - "*"
  gateways:
  - greeting-gateway
  http:
  - match:
    - uri:
        exact: /greeting
    route:
    - destination:
        host: greeting-service-backend
        port:
          number: 80
